--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,25 +23,23 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: './package-lock.json'
 
       - name: Install dependencies
-        working-directory: ./frontend
         run: npm ci
 
       - name: Build
-        working-directory: ./frontend
         run: npm run build
 
       - name: Verify dist folder
         run: |
-          if [ -d frontend/dist ]; then
+          if [ -d dist ]; then
             echo "✅ dist exists!"
-            ls -la frontend/dist/
+            ls -la dist/
           else
             echo "❌ ERROR: dist folder not found!"
-            echo "Contents of frontend:"
-            ls -la frontend/
+            echo "Contents of project:"
+            ls -la ./
             exit 1
           fi
 
@@ -51,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: frontend/dist
+          path: './dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
